@@ -1,0 +1,89 @@
+# Copyright 2014 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Tests side-effects of sizeof evaluation.
+# Based on gcc/testsuite/gcc.dg/vla-4.c; vla-15.c
+
+standard_testfile
+
+if { [prepare_for_testing ${testfile}.exp ${testfile} ${srcfile}] } {
+    return -1
+}
+
+if ![runto_main] {
+    return -1
+}
+
+gdb_breakpoint [gdb_get_line_number "vla-filled"]
+gdb_continue_to_breakpoint "vla-filled"
+
+# Check side effects for sizeof argument.
+set sizeof_int [get_sizeof "int" 4]
+set sizeof_vla [ expr "10" * "$sizeof_int" ]
+
+gdb_test "print sizeof (vla1\[i++\])" " = ${sizeof_int}" \
+         "print sizeof (vla1\[i++\])"
+gdb_test "print i" " = 0" \
+         "print i - sizeof no side effects"
+
+gdb_test "print sizeof (++vla1\[0\])" " = ${sizeof_int}" \
+         "print sizeof (++vla1\[0\])"
+gdb_test "print vla1\[0\]" " = 10" \
+         "print vla1\[0\] - sizeof no side effects"
+
+gdb_test "ptype ++vla1\[0\]" "type = int" "ptype ++vla1\[0\]"
+gdb_test "print vla1\[0\]" " = 10" \
+         "print vla1\[0\] - ptype no side effects"
+
+gdb_test "whatis ++vla1\[0\]" "type = int" "whatis ++vla1\[0\]"
+gdb_test "print vla1\[0\]" " = 10" \
+         "print vla1\[0\] - whatis no side effects"
+
+
+gdb_test "print sizeof (vla2\[i++\])" " = ${sizeof_vla}" \
+         "print sizeof (vla2\[i++\])"
+gdb_test "print i" " = 1" \
+         "print i - sizeof with side effects (1)"
+
+gdb_test "print sizeof (vla2\[i++ + sizeof(j++)\])" " = ${sizeof_vla}" \
+         "print sizeof (vla2\[i++ + sizeof(j++)\])"
+gdb_test "print i" " = 2" \
+         "print i - sizeof with side effects (2)"
+gdb_test "print j" " = 0" \
+         "print j - sizeof with no side effects"
+
+gdb_test "ptype vla2\[i++\]" "type = int \\\[10\\\]" \
+         "ptype vla2\[i++\]"
+gdb_test "print i" " = 2" \
+         "print i - ptype with side effects (1)"
+
+gdb_test "ptype vla2\[i++ + sizeof(j++)\]" "type = int \\\[10\\\]" \
+         "ptype vla2\[i++ + sizeof(j++)\]"
+gdb_test "print i" " = 2" \
+         "print i - ptype with side effects (2)"
+gdb_test "print j" " = 0" \
+         "print j - ptype with no side effects"
+
+gdb_test "whatis vla2\[i++\]" "type = int \\\[10\\\]" \
+         "whatis vla2\[i++\]"
+gdb_test "print i" " = 2" \
+         "print i - whatis with side effects (1)"
+
+gdb_test "whatis vla2\[i++ + sizeof(j++)\]" "type = int \\\[10\\\]" \
+         "whatis vla2\[i++ + sizeof(j++)\]"
+gdb_test "print i" " = 2" \
+         "print i - whatis with side effects (2)"
+gdb_test "print j" " = 0" \
+         "print j - whatis with no side effects"
